Finished first draft of website

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
+							<li><a href="#three">About Me</a></li>
 							<li><a href="#one">Experiences</a></li>
 							<li><a href="#two">Projects</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#four">Get in touch</a></li>
+							
 						</ul>
 					</nav>
 				</div>
@@ -34,26 +36,51 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Daniel Truong</h1>
-							<p>Nice to meet you. I'm a student engineer in love with technology based in Southern California.</p>
+							<p style="color: rgb(231, 231, 231);">Hi! I'm excited to see you here. Learn more about me below.</p>
 							<ul class="actions">
 								<!-- <li><a href="#one" class="button scrolly">Learn more about me!</a></li> -->
-								<li><a href="#one" class="button scrolly">Check out my resume here.</a></li>
 							</ul>
 						</div>
 					</section>
+					<!-- three  -->
+					<section id="three" class="wrapper style4 fade-up">
+							<div class="inner">
+								<div id="profile-photo-wrapper">
+										<div class="photo">
+											<img class="profile-photo" src="images/new-profile-pic.JPG"/>
+										</div>
+								</div>
+								<h2>An engineer, student, and leader.</h2>
+
+								<p> I am a college student studying <span>Computer Science</span> at <span>University of California, San Diego</span>, graduating in June 2022. 
+									Ever since I was a kid, I'd always been in love with technology. I learned how to code 
+									during junior year of high school. And since then, I've become a Software Engineer, committed 
+									to learning as much as I can about technology, and providing others the opportunity to code by
+									running technical workshops. In my spare time, I like to play Super Smash Bros Ultimate
+									(Mario main), take lots of photos, travel, and eat tons of food with friends.
+								</p>
+								<br>
+
+								<p> I am always seeking new opportunities. Please feel free to contact me if you'd like to work 
+									together, or if you just have any questions about my experiences. </p>
+								<br>
+								<ul class="actions">
+										<li><a href="mailto:danieldtruong@yahoo.com" class="button scrolly">Email me at danieldtruong@yahoo.com</a></li>
+										<li><a href="https://daniel-d-truong.github.io/resume/" class="button scrolly">Check out my resume here.</a></li>
+								</ul>	
+								
+							</div>
+						</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<!-- Microsoft Internship -->
 						<section>
-							<a href="#" class="image"><img src="images/mslogo.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/mslogo1.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Incoming SWE Intern at Microsoft,<br>Summer 2020</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									<p>I will be on the Microsoft Azure team in Redmon, Washington. I am very excited to receive this opportunity and for what's to come this upcoming summer.</p>
 								</div>
 							</div>
 						</section>
@@ -63,23 +90,27 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Engineering Practicum Intern at Google,<br>Summer 2019</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									<p>As an intern with the Google Admin Console Enterprise Team, I finished two projects. First, I developed several features which allowed
+										other Googlers to view and perform actions on database content, directly from the UI. Secondly, my partner and I created an error injection feature, allowing 
+										other Googlers to insert errors into the UI, immediately being able to view the UI's response in that situation. During this experience, I wrote unit tests, integration tests, 
+										developed several design documents, and submitted numerous code reviews. </p>
 								</div>
 							</div>
 						</section>
 						<!-- Data Technical IT Experience -->
 						<section>
-							<a href="#" class="image"><img src="images/ucsd-sfs.jpeg" style="transform: scale(2,2);" alt="" data-position="top center" /></a>
+							<a style="background-color: white" href="#" class="image">
+								<img style="width: 50px" src="images/ucsdsquare.png"> </img>
+							</a>
 							<div class="content">
 								<div class="inner">
 									<h2>Data Technical IT Assistant,<br>November 2018 - Present</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									<p>As a developer for the Student Financial Solutions department for UCSD, I've developed & troubleshooted several technical projects which help make processes more efficient. 
+										First, I developed and troubleshooted a credit card refund processer using Microsoft Access, used by workers who fulfill refunds requested by students at school. I've also 
+										started the development of a refund generator web application. Most notably, I've developed several C# Windows Applications, using the HostExplorer library to allow workers
+										to submit thousands of pieces of data through one application. Throughout these projects, I've had to communicate with the team to understand the features needed from the 
+										application and maintained several documents of project documentation and analysis.
+									</p>
 								</div>
 							</div>
 						</section>
@@ -88,8 +119,8 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Projects</h2>
-							<p>Here some of the many projects that I've worked throughout my journey!</p>
+							<h2 style="text-align: center">Projects</h2>
+							<p style="color: rgb(231, 231, 231); text-align: center">Here some of the many projects that I've worked throughout my journey!</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-mobile"></span>
@@ -112,78 +143,34 @@
 									<p>Through this app, people could find/post local events happening around them, using JavaScript and Python. This project was made during the Computer Science Summer Institute at Google.</p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="https://github.com/daniel-d-truong" class="button">Interested in more of my projects? Check out my Github!</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
+							<h3 style="text-align: center"> Interested in seeing more projects? </h3>
+							<div style="text-align: center">
+							<a  href="https://github.com/daniel-d-truong" class="button">Check out my Github!</a>
 							</div>
 						</div>
 					</section>
+
+					<!-- four  -->
+					<section id="four" class="wrapper style1 fade-up">
+							<div  style="text-align: center" class="inner">
+								<h2>Get in touch with me!</h2>
+								<p>Feel free to reach out to me at any time and I'll get back to you as soon as possible.</p>
+									<ul class="icons">
+										<li><a href="https://www.linkedin.com/in/daniel-d-truong/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="mailto:danieldtruong@yahoo.com" class="icon fa-envelope"><span class="label">Mail</span></a></li>
+										<li><a href="https://github.com/daniel-d-truong" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									</ul>
+							</div>
+						</section>				
+
 
 			</div>
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<ul class="menu" style="text-align: center" >
+						<li style="color: rgb(231, 231, 231);">&copy; Daniel Truong.</li>
 					</ul>
 				</div>
 			</footer>
