Updated website by fixing logos and changing color scheme

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
+		<!-- <link href="https://fonts.googleapis.com/css?family=Overpass:400,700&display=swap" rel="stylesheet"> -->
+		<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -37,10 +40,11 @@
 						<div class="inner">
 							<h1>Daniel Truong</h1>
 							<p style="color: rgb(231, 231, 231);">Hi! I'm excited to see you here. Learn more about me below.</p>
-							<ul class="actions">
-								<!-- <li><a href="#one" class="button scrolly">Learn more about me!</a></li> -->
-							</ul>
 						</div>
+						<!-- <div class="fadeIn transition-arrow">
+							<span>Who am I?</span><br>
+							<a href="#three" class="fas fa-angle-down"></a>
+						</div> -->
 					</section>
 					<!-- three  -->
 					<section id="three" class="wrapper style4 fade-up">
@@ -65,10 +69,9 @@
 									together, or if you just have any questions about my experiences. </p>
 								<br>
 								<ul class="actions">
-										<li><a href="mailto:danieldtruong@yahoo.com" class="button scrolly">Email me at danieldtruong@yahoo.com</a></li>
+										<li><a href="mailto:danieldtruong@yahoo.com" class="button scrolly">Email: danieldtruong@yahoo.com</a></li>
 										<li><a href="https://daniel-d-truong.github.io/resume/" class="button scrolly">Check out my resume here.</a></li>
 								</ul>	
-								
 							</div>
 						</section>
 
@@ -76,35 +79,43 @@
 					<section id="one" class="wrapper style2 spotlights">
 						<!-- Microsoft Internship -->
 						<section>
-							<a href="#" class="image"><img src="images/mslogo1.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="logo-wrapper">
+								<img class="logo" src="images/mslogo2.jpg" alt=""/>
+							</div>
 							<div class="content">
 								<div class="inner">
-									<h2>Incoming SWE Intern at Microsoft,<br>Summer 2020</h2>
-									<p>I will be on the Microsoft Azure team in Redmon, Washington. I am very excited to receive this opportunity and for what's to come this upcoming summer.</p>
+									<h2>Incoming SWE Intern at Microsoft, Summer 2020</h2>
+									<p>I will be on the Microsoft Azure team in Redmond, Washington. I am very excited to receive this opportunity and for what's to come this upcoming summer.</p>
 								</div>
 							</div>
 						</section>
+
 						<!-- Google Internship -->
 						<section>
-							<a href="#" class="image"><img src="images/google-logo.jpg" alt="" data-position="center center" /></a>
+							<div class="logo-wrapper">
+								<img class="logo" src="images/google-logo.jpg" alt=""/>
+							</div>
 							<div class="content">
 								<div class="inner">
-									<h2>Engineering Practicum Intern at Google,<br>Summer 2019</h2>
+
+									<h2>Engineering Practicum Intern at Google, Summer 2019</h2>
 									<p>As an intern with the Google Admin Console Enterprise Team, I finished two projects. First, I developed several features which allowed
 										other Googlers to view and perform actions on database content, directly from the UI. Secondly, my partner and I created an error injection feature, allowing 
 										other Googlers to insert errors into the UI, immediately being able to view the UI's response in that situation. During this experience, I wrote unit tests, integration tests, 
 										developed several design documents, and submitted numerous code reviews. </p>
 								</div>
 							</div>
+
+
 						</section>
 						<!-- Data Technical IT Experience -->
 						<section>
-							<a style="background-color: white" href="#" class="image">
-								<img style="width: 50px" src="images/ucsdsquare.png"> </img>
-							</a>
+							<div class="logo-wrapper">
+								<img class="logo" src="images/ucsdsquare.png"> </img>
+							</div>
 							<div class="content">
 								<div class="inner">
-									<h2>Data Technical IT Assistant,<br>November 2018 - Present</h2>
+									<h2>Data Technical IT Assistant, November 2018 - Present</h2>
 									<p>As a developer for the Student Financial Solutions department for UCSD, I've developed & troubleshooted several technical projects which help make processes more efficient. 
 										First, I developed and troubleshooted a credit card refund processer using Microsoft Access, used by workers who fulfill refunds requested by students at school. I've also 
 										started the development of a refund generator web application. Most notably, I've developed several C# Windows Applications, using the HostExplorer library to allow workers
@@ -152,7 +163,7 @@
 
 					<!-- four  -->
 					<section id="four" class="wrapper style1 fade-up">
-							<div  style="text-align: center" class="inner">
+							<div class="inner">
 								<h2>Get in touch with me!</h2>
 								<p>Feel free to reach out to me at any time and I'll get back to you as soon as possible.</p>
 									<ul class="icons">
@@ -170,7 +181,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu" style="text-align: center" >
-						<li style="color: rgb(231, 231, 231);">&copy; Daniel Truong.</li>
+						<li style="color: rgb(231, 231, 231);">&copy; Daniel Truong</li>
 					</ul>
 				</div>
 			</footer>
