Fixed white space on cover photo in home page and made fonts bigger by removing unneeded dependencies

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
-		<link rel='stylesheet' type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Overpass:400,700&display=swap" rel="stylesheet">
 		<!-- <script src='https://kit.fontawesome.com/a076d05399.js'></script> -->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -78,7 +76,7 @@
 										together, or if you just have any questions about my experiences. </p>
 									<br>
 									<ul class="actions">
-											<li><a href="mailto:danieldtruong@yahoo.com" class="button scrolly">Email: danieldtruong@yahoo.com</a></li>
+											<li><a href="mailto:danieldtruong@yahoo.com" class="button scrolly"><span class="icon fa-envelope"></span> danieldtruong@yahoo.com</a></li>
 											<li><a href="https://daniel-d-truong.github.io/resume/" class="button scrolly">Check out my resume here.</a></li>
 									</ul>	
 								</div>
