Fades in the cover photo

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 					</section>
 
 					<!-- four  -->
-					<section id="four" class="wrapper style1 fade-up">
+					<section id="four" class="wrapper style1 fade-down">
 							<div style="background-color: rgba(83, 113, 179, 0.8); width: 100%;" class="inner">
 								<h2>Get in touch with me!</h2>
 								<p>Feel free to reach out to me at any time and I'll get back to you as soon as possible.</p>
@@ -216,5 +216,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/media-queries/clickSidebar.js"></script>
+			<script src="assets/js/media-queries/makeIntroVisible.js"></script>
 	</body>
 </html>
