Added ACM description to experience and deleted the php file.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							</div>
 							<div class="content">
 								<div class="inner">
-									<h2>Incoming SWE Intern at Microsoft, Summer 2020</h2>
+									<h2>Incoming SWE Intern @ Microsoft<br><i>Summer 2020</i></h2>
 									<p>I will be on the Microsoft Azure team in Redmond, Washington. I am very excited to receive this opportunity and for what's to come this upcoming summer.</p>
 								</div>
 							</div>
@@ -100,20 +100,38 @@
 
 						<!-- Google Internship -->
 						<section>
+
 							<div class="logo-wrapper">
 								<img class="logo" src="images/google-logo.jpg" alt=""/>
 							</div>
 							<div class="content">
 								<div class="inner">
-									<h2>Engineering Practicum Intern at Google, Summer 2019</h2>
+									<h2>Engineering Practicum Intern @ Google<br><i>Summer 2019</i></h2>
 									<p>As an intern with the Google Admin Console Enterprise Team, I finished two projects. First, I developed several features which allowed
 										other Googlers to view and perform actions on database content, directly from the UI. Secondly, my partner and I created an error injection feature, allowing 
 										other Googlers to insert errors into the UI, immediately being able to view the UI's response in that situation. During this experience, I wrote unit tests, integration tests, 
 										developed several design documents, and submitted numerous code reviews. </p>
 								</div>
 							</div>
-
-
+						</section>
+						<!-- ACM Experience -->
+						<section>
+							<div class="logo-wrapper">
+								<img class="logo" src="images/acmlogo.svg" alt=""/>
+							</div>
+							<div class="content">
+								<div class="inner">
+									<h2>Co-Founder and Technical Events Director @ ACM UCSD<br><i>February 2019 - Present</i></h2>
+									<p>ACM UCSD (or Association for Computing Machinery) is computing organization with the goal of promoting computing excellence to all people interested in technology. I was part of a group of 10 people who felt that a computing 
+										community was much needed on campus, and thus we founded ACM UCSD. My role in this org is to teach workshops, most of which focus on web development. I have taught 10+ workshops to 250+ students, about topics such as the 
+										MERN Stack, HTML/CSS, and Deployment, and plan to teach a total of 20 workshops to 700+ students by the end of the school year.
+									</p>
+								</div>
+								<ul class="actions">
+									<li><a href="https://github.com/acmucsd/hackschool" class="button">Hack School Workshops</a></li>
+									<li><a href="https://github.com/acmucsd/sd-hacks-2019" class="button">SD Hacks Workshop</a></li>
+								</ul>
+							</div>
 						</section>
 						<!-- Data Technical IT Experience -->
 						<section>
@@ -122,7 +140,7 @@
 							</div>
 							<div class="content">
 								<div class="inner">
-									<h2>Data Technical IT Assistant, November 2018 - Present</h2>
+									<h2>Data Technical IT Assistant<br><i>November 2018 - Present</i></h2>
 									<p>As a developer for the Student Financial Solutions department for UCSD, I've developed & troubleshooted several technical projects which help make processes more efficient. 
 										First, I developed and troubleshooted a credit card refund processer using Microsoft Access, used by workers who fulfill refunds requested by students at school. I've also 
 										started the development of a refund generator web application. Most notably, I've developed several C# Windows Applications, using the HostExplorer library to allow workers
