--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
 							<li><a href="#one">Experiences</a></li>
 							<li><a href="#two">Projects</a></li>
 							<li><a href="#four">Get in touch</a></li>
-							
 						</ul>
 					</nav>
 				</div>
+				<p>oof</p>
 			</section>
 
 		<!-- Wrapper -->
