--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<br>
 									<ul class="actions">
 											<li><a href="mailto:danieldtruong@yahoo.com" class="button scrolly"><span class="icon fa-envelope"></span> danieldtruong@yahoo.com</a></li>
-											<li><a href="https://daniel-d-truong.github.io/resume/" class="button scrolly">Check out my resume here.</a></li>
+											<li><a href="https://resume.danieltruong.net/" class="button scrolly">Check out my resume here.</a></li>
 									</ul>	
 								</div>
 							</div>
