Added typewriter effect

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Daniel Truong</h1>
+							<h1 id="typewriter">Daniel Truong</h1>
 							<p style="color: rgb(231, 231, 231);">Hi! I'm excited to see you here. Learn more about me below.</p>
 							<div class="fadeIn transition-arrow">
 								<span>Who am I?</span><br>
@@ -235,5 +235,6 @@
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/media-queries/clickSidebar.js"></script>
 			<script src="assets/js/media-queries/makeIntroVisible.js"></script>
+			<script src="assets/js/typewriter.js"></script>
 	</body>
 </html>
